testsuite/tests/match-exception-warnings/reachability.ml.reference

#         Characters 51-52:
    | exception _ -> .
                ^
Error: This match case could not be refuted.
       Here is an example of a value that would reach it: _
#           Characters 59-60:
    | None | exception _ -> .
                       ^
Error: This match case could not be refuted.
       Here is an example of a value that would reach it: _
#           Characters 52-61:
    | exception Not_found | None -> .
                ^^^^^^^^^
Error: This match case could not be refuted.
       Here is an example of a value that would reach it: Not_found
#           val f : 'a -> unit = <fun>
# 
